--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "96a6a1e1",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -22,18 +22,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/kaggle/input/heartbeat/ptbdb_abnormal.csv\n",
-      "/kaggle/input/heartbeat/ptbdb_normal.csv\n",
-      "/kaggle/input/heartbeat/mitbih_test.csv\n",
-      "/kaggle/input/heartbeat/mitbih_train.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This Python 3 environment comes with many helpful analytics libraries installed\n",
     "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
@@ -62,6 +51,60 @@
     "\n",
     "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
     "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c3a84163",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/simon/.kaggle/kaggle.json'\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Test cell for simon: Using Kaggle API to download the datasets indepent of github and its filesize limitations. Storing it in folder located outside of the repo.\n",
+    "# If this works, all filepaths have to be adjusted in all notebooks to make use of the downloaded datasets.\n",
+    "#RUN THIS CELL ONLY ONCE FOR ALL NOTEBOOKS!\n",
+    "\n",
+    "from kaggle.api.kaggle_api_extended import KaggleApi\n",
+    "\n",
+    "#configuring and authentification with kaggle api:\n",
+    "api = KaggleApi()\n",
+    "api.authenticate()\n",
+    "\n",
+    "#Configuring the metadata for the ecg heartbeat data (original username etc)\n",
+    "dataset_owner = \"shayanfazeli\"\n",
+    "dataset_name = \"heartbeat\"\n",
+    "\n",
+    "#Configuring a download path that is NOT in the current github repo (so the big files are not pushed and cause an error!) --> Links to filepaths have to be dynamically adjusted\n",
+    "download_path = \"/home/simon/datasets/\"\n",
+    "\n",
+    "# Download structure: First check if dataset is already downloaded, else download it and store it in download path (should be outside git repo!)\n",
+    "dataset_folder = os.path.join(download_path, dataset_name)\n",
+    "if not os.path.exists(dataset_folder):\n",
+    "    # Case 1: Dataset path is not created --> Create it and download datasets into it\n",
+    "    api.dataset_download_files(dataset_owner + \"/\" + dataset_name, path=download_path, unzip=True)\n",
+    "    print(\"Datasets are downloaded and unzipped.\")\n",
+    "else:\n",
+    "    # Case 2: Folder is created, but datasets might be missing\n",
+    "    missing_files = [] \n",
+    "    for file_name in [\"mitbih_test.csv\", \"mitbih_train.csv\", \"ptbdb_abnormal.csv\", \"ptbdb_normal.csv\"]:  # These are the hardcoded names of the datasets that should be downloaded.\n",
+    "        file_path = os.path.join(dataset_folder, file_name)\n",
+    "        if not os.path.exists(file_path):\n",
+    "            missing_files.append(file_name)\n",
+    "\n",
+    "    if missing_files:\n",
+    "        # If the list contains missing files, download ALL files and overwrite the old folder.\n",
+    "        api.dataset_download_files(dataset_owner + \"/\" + dataset_name, path=download_path, unzip=True, force=True)\n",
+    "        print(\"Missing data was donwloaded and unzipped. All Datasets are now available.\")\n",
+    "    else:\n",
+    "        print(\"All Datasets are already available.\")"
    ]
   },
   {
@@ -1207,7 +1250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.0rc1"
   },
   "papermill": {
    "default_parameters": {},
