Notebook 2a: filepath changes work and the download folder via Kaggle API can be accessed.

--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "c3a84163",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/simon/.kaggle/kaggle.json'\n"
+      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/simon/.kaggle/kaggle.json'\n",
+      "All Datasets are already available.\n"
      ]
     }
    ],
@@ -74,7 +75,7 @@
     "\n",
     "from kaggle.api.kaggle_api_extended import KaggleApi\n",
     "\n",
-    "#configuring and authentification with kaggle api:\n",
+    "#configuring and authentification with kaggle api. This could be configured so that a authentification mask is shown?\n",
     "api = KaggleApi()\n",
     "api.authenticate()\n",
     "\n",
@@ -83,13 +84,13 @@
     "dataset_name = \"heartbeat\"\n",
     "\n",
     "#Configuring a download path that is NOT in the current github repo (so the big files are not pushed and cause an error!) --> Links to filepaths have to be dynamically adjusted\n",
-    "download_path = \"/home/simon/datasets/\"\n",
+    "download_path = \"/home/simon/KAGGLE_datasets\"\n",
     "\n",
     "# Download structure: First check if dataset is already downloaded, else download it and store it in download path (should be outside git repo!)\n",
     "dataset_folder = os.path.join(download_path, dataset_name)\n",
     "if not os.path.exists(dataset_folder):\n",
     "    # Case 1: Dataset path is not created --> Create it and download datasets into it\n",
-    "    api.dataset_download_files(dataset_owner + \"/\" + dataset_name, path=download_path, unzip=True)\n",
+    "    api.dataset_download_files(dataset_owner + \"/\" + dataset_name, path=download_path + \"/\" + dataset_name, unzip=True)\n",
     "    print(\"Datasets are downloaded and unzipped.\")\n",
     "else:\n",
     "    # Case 2: Folder is created, but datasets might be missing\n",
@@ -101,15 +102,18 @@
     "\n",
     "    if missing_files:\n",
     "        # If the list contains missing files, download ALL files and overwrite the old folder.\n",
-    "        api.dataset_download_files(dataset_owner + \"/\" + dataset_name, path=download_path, unzip=True, force=True)\n",
+    "        api.dataset_download_files(dataset_owner + \"/\" + dataset_name, path=download_path + \"/\" + dataset_name, unzip=True, force=True)\n",
     "        print(\"Missing data was donwloaded and unzipped. All Datasets are now available.\")\n",
     "    else:\n",
-    "        print(\"All Datasets are already available.\")"
+    "        print(\"All Datasets are already available.\")\n",
+    "\n",
+    "#Creating new variable that links to the datasets and can be used in the rest of the code.\n",
+    "path_to_datasets = download_path + \"/\" + dataset_name "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "06073fe3",
    "metadata": {
     "execution": {
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "71a126b0",
    "metadata": {
     "execution": {
@@ -154,8 +158,9 @@
    },
    "outputs": [],
    "source": [
-    "df_train= pd.read_csv('/kaggle/input/heartbeat/mitbih_train.csv', header=None)\n",
-    "df_test=pd.read_csv('/kaggle/input/heartbeat/mitbih_test.csv',header=None)\n",
+    "# This cell now makes use of the downloadfolder for the datasets. If already available locally, the filepaths can be changed.\n",
+    "df_train= pd.read_csv(path_to_datasets + \"/\" + 'mitbih_train.csv', header=None)\n",
+    "df_test=pd.read_csv(path_to_datasets + \"/\" +  'mitbih_test.csv',header=None)\n",
     "\n",
     "#split target and value\n",
     "train_target=df_train[187]\n",
