Notebook 2a changed: Datasets are stored now in the /data folder like suggested by Datascientest. This folder is in the gitignore list and therefore the large files are not pushed to the repo.

--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -84,7 +84,7 @@
     "dataset_name = \"heartbeat\"\n",
     "\n",
     "#Configuring a download path that is NOT in the current github repo (so the big files are not pushed and cause an error!) --> Links to filepaths have to be dynamically adjusted\n",
-    "download_path = \"/home/simon/KAGGLE_datasets\"\n",
+    "download_path = \"../data/KAGGLE_datasets\" #In this case we use the data folder that is in the .gitignore list and therefore not pushed! To keep everything in one local repo.\n",
     "\n",
     "# Download structure: First check if dataset is already downloaded, else download it and store it in download path (should be outside git repo!)\n",
     "dataset_folder = os.path.join(download_path, dataset_name)\n",
