Notebook 2A changed: Use the config class to define the sample name, just like in notebooks 3a and 3b.

--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "c3a84163",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "06073fe3",
    "metadata": {
     "execution": {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "71a126b0",
    "metadata": {
     "execution": {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "f3cbb4eb",
    "metadata": {
     "execution": {
@@ -192,13 +192,14 @@
    "outputs": [],
    "source": [
     "class Config:\n",
-    "    oversample = True\n",
-    "    undersample = False"
+    "    oversample = False\n",
+    "    undersample = False\n",
+    "    sample_name = \"UNDEFINED_SAMPLE\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "045ff622",
    "metadata": {
     "execution": {
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "303ceae0",
    "metadata": {
     "execution": {
@@ -242,14 +243,29 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using the original mitbih dataset\n",
+      "Sample Name: MITBIH_A_Original\n"
+     ]
+    }
+   ],
    "source": [
     "if Config.oversample:\n",
     "    train, train_target = oversampler.fit_resample(df_train.iloc[:,:-1], df_train.iloc[:,-1])\n",
+    "    Config.sample_name = \"MITBIH_B_SMOTE\"\n",
+    "    print(\"Sample Name:\", Config.sample_name)\n",
     "elif Config.undersample:\n",
     "    train, train_target = undersampler.fit_resample(df_train.iloc[:,:-1], df_train.iloc[:,-1])\n",
+    "    Config.sample_name = \"MITBIH_C_RUS\"\n",
+    "    print(\"Sample Name:\", Config.sample_name)\n",
     "else: \n",
-    "    print(\"Using the original mitbih dataset\")"
+    "    print(\"Using the original mitbih dataset\")\n",
+    "    Config.sample_name = \"MITBIH_A_Original\"\n",
+    "    print(\"Sample Name:\", Config.sample_name)"
    ]
   },
   {
