Notebook 2a changed: Model and classification_report saving function implemented and working.

--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "96a6a1e1",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -34,6 +34,7 @@
     "from imblearn.over_sampling import SMOTE\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
+    "import pickle\n",
     "\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.tree import DecisionTreeClassifier as DTC\n",
@@ -270,7 +271,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
+   "id": "12e9d176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Function to save models and classification report directly after running.\n",
+    "import os\n",
+    "import pickle\n",
+    "\n",
+    "def save_model_and_report(model, report, model_filename, report_filename, model_folder=\"../models/ML_Models\", report_folder=\"../reports/figures/ML_Models\"):\n",
+    "    # Save the model\n",
+    "    model_savepath = os.path.join(model_folder, model_filename)\n",
+    "    with open(model_savepath, \"wb\") as f:\n",
+    "        pickle.dump(model, f)\n",
+    "    print(f\"The model was saved as {model_filename} in folder {model_folder}.\")\n",
+    "\n",
+    "    # Save the classification report\n",
+    "    report_savepath = os.path.join(report_folder, report_filename)\n",
+    "    with open(report_savepath, \"w\") as f:\n",
+    "        f.write(report)\n",
+    "    print(f\"The classification report was saved as {report_filename} in folder {report_folder}.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "da81ef52",
    "metadata": {
     "execution": {
@@ -295,7 +322,7 @@
        "(362355, 187)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,12 +345,14 @@
     "tags": []
    },
    "source": [
-    "# **SVM**"
+    "# **SVM**\n",
+    "\n",
+    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "140181b5",
    "metadata": {
     "execution": {
@@ -341,120 +370,6 @@
     },
     "tags": []
    },
-   "outputs": [],
-   "source": [
-    "model = SVC(cache_size=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "4d35a457",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-08T16:37:30.044565Z",
-     "iopub.status.busy": "2024-03-08T16:37:30.044314Z",
-     "iopub.status.idle": "2024-03-08T17:15:06.757014Z",
-     "shell.execute_reply": "2024-03-08T17:15:06.756136Z"
-    },
-    "papermill": {
-     "duration": 2256.729265,
-     "end_time": "2024-03-08T17:15:06.765640",
-     "exception": false,
-     "start_time": "2024-03-08T16:37:30.036375",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVC(cache_size=500)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SVC</label><div class=\"sk-toggleable__content\"><pre>SVC(cache_size=500)</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "SVC(cache_size=500)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fit(train,train_target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c8341636",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-08T17:15:06.780951Z",
-     "iopub.status.busy": "2024-03-08T17:15:06.780669Z",
-     "iopub.status.idle": "2024-03-08T17:15:06.784239Z",
-     "shell.execute_reply": "2024-03-08T17:15:06.783523Z"
-    },
-    "papermill": {
-     "duration": 0.012941,
-     "end_time": "2024-03-08T17:15:06.785843",
-     "exception": false,
-     "start_time": "2024-03-08T17:15:06.772902",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#model.score(train,train_target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d64a54f8",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-08T17:15:06.800791Z",
-     "iopub.status.busy": "2024-03-08T17:15:06.800137Z",
-     "iopub.status.idle": "2024-03-08T17:18:35.795309Z",
-     "shell.execute_reply": "2024-03-08T17:18:35.794402Z"
-    },
-    "papermill": {
-     "duration": 209.005152,
-     "end_time": "2024-03-08T17:18:35.797766",
-     "exception": false,
-     "start_time": "2024-03-08T17:15:06.792614",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "predictions = model.predict(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "244cd070",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-08T17:18:35.813399Z",
-     "iopub.status.busy": "2024-03-08T17:18:35.813003Z",
-     "iopub.status.idle": "2024-03-08T17:18:35.847243Z",
-     "shell.execute_reply": "2024-03-08T17:18:35.846274Z"
-    },
-    "papermill": {
-     "duration": 0.043794,
-     "end_time": "2024-03-08T17:18:35.848861",
-     "exception": false,
-     "start_time": "2024-03-08T17:18:35.805067",
-     "status": "completed"
-    },
-    "tags": []
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -462,22 +377,81 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9912    0.9367    0.9632     18118\n",
-      "         1.0     0.4225    0.8237    0.5585       556\n",
-      "         2.0     0.8861    0.9351    0.9099      1448\n",
-      "         3.0     0.2780    0.9198    0.4269       162\n",
-      "         4.0     0.9692    0.9770    0.9731      1608\n",
+      "         0.0     0.9911    0.9373    0.9634     18118\n",
+      "         1.0     0.4194    0.8237    0.5558       556\n",
+      "         2.0     0.8917    0.9323    0.9115      1448\n",
+      "         3.0     0.2822    0.9198    0.4319       162\n",
+      "         4.0     0.9686    0.9776    0.9731      1608\n",
       "\n",
-      "    accuracy                         0.9366     21892\n",
-      "   macro avg     0.7094    0.9185    0.7663     21892\n",
-      "weighted avg     0.9629    0.9366    0.9462     21892\n",
+      "    accuracy                         0.9369     21892\n",
+      "   macro avg     0.7106    0.9181    0.7672     21892\n",
+      "weighted avg     0.9631    0.9369    0.9464     21892\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "#Just the code for model creation, fitting and creating the report out of the predictions.\n",
+    "model = SVC(cache_size=500)\n",
+    "model.fit(train,train_target)\n",
+    "predictions = model.predict(test)\n",
     "report=classification_report(test_target, predictions, digits=4)\n",
     "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ceb7efd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model was saved as SVM_Basemodel_no_gridsearch_MITBIH_A_Original.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as SVM_Basemodel_no_gridsearch_MITBIH_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calling the save_model_and_report function for the SVM Model\n",
+    "model_filename = f\"SVM_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
+    "report_filename = f\"SVM_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "save_model_and_report(model, report, model_filename, report_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4df06297",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM Basemodel was saved as SVM_Basemodel_no_gridsearch_MITBIH_A_Original.pkl in folder ../models/ML_Models\n",
+      "Classification report was saved as SVM_Basemodel_no_gridsearch_MITBIH_A_Original_classification_report.txt in folder ../reports/figures/ML_Models\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Saving the model and the classification report as files directly in the current github repo (this is also pushed!)\n",
+    "model_filename = f\"SVM_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
+    "model_folder = \"../models/ML_Models\"\n",
+    "model_savepath = os.path.join(model_folder, model_filename)\n",
+    "with open(model_savepath, \"wb\") as f:\n",
+    "    pickle.dump(model, f)\n",
+    "print(f\"SVM Basemodel was saved as {model_filename} in folder {model_folder}\")\n",
+    "\n",
+    "#same for the classification report\n",
+    "report_filename = f\"SVM_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "report_folder = \"../reports/figures/ML_Models\"\n",
+    "report_savepath = os.path.join(report_folder, report_filename)\n",
+    "with open(report_savepath, \"w\") as f:\n",
+    "    f.write(report)\n",
+    "print(f\"Classification report was saved as {report_filename} in folder {report_folder}\")"
    ]
   },
   {
