notebook 2a changed: added switch for training or not training the simple models.

--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -195,7 +195,13 @@
     "class Config:\n",
     "    oversample = False\n",
     "    undersample = False\n",
-    "    sample_name = \"UNDEFINED_SAMPLE\""
+    "    sample_name = \"UNDEFINED_SAMPLE\"\n",
+    "\n",
+    "Train_SVM =  False #trains the SVM Model without Gridsearch\n",
+    "Train_KNN = True #trains the KNN Model without Gridsearch\n",
+    "Train_DTC = True #trains the DTC Model without Gridsearch\n",
+    "Train_RF = True #trains the RF Model without Gridsearch\n",
+    "Train_XGB = True #trains the XGB Model without Gridsearch\n"
    ]
   },
   {
@@ -392,33 +398,18 @@
    ],
    "source": [
     "#Just the code for model creation, fitting and creating the report out of the predictions.\n",
-    "model = SVC(cache_size=500)\n",
-    "model.fit(train,train_target)\n",
-    "predictions = model.predict(test)\n",
-    "report=classification_report(test_target, predictions, digits=4)\n",
-    "print(report)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "ceb7efd3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The model was saved as SVM_Basemodel_no_gridsearch_MITBIH_A_Original.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as SVM_Basemodel_no_gridsearch_MITBIH_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Calling the save_model_and_report function for the SVM Model\n",
-    "model_filename = f\"SVM_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
-    "report_filename = f\"SVM_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
-    "save_model_and_report(model, report, model_filename, report_filename)"
+    "if Train_SVM == True:\n",
+    "    model = SVC(cache_size=500)\n",
+    "    model.fit(train,train_target)\n",
+    "    predictions = model.predict(test)\n",
+    "    report=classification_report(test_target, predictions, digits=4)\n",
+    "    print(report)\n",
+    "    #Calling the save_model_and_report function for the SVM Model\n",
+    "    model_filename = f\"SVM_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
+    "    report_filename = f\"SVM_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "    save_model_and_report(model, report, model_filename, report_filename)\n",
+    "else:\n",
+    "    print(\"SVM Model withoud gridsearch is not trained\")"
    ]
   },
   {
@@ -462,24 +453,18 @@
    },
    "outputs": [],
    "source": [
-    "model = KNN(n_jobs = -1)\n",
-    "model.fit(train,train_target)\n",
-    "predictions = model.predict(test)\n",
-    "report=classification_report(test_target, predictions, digits=4)\n",
-    "print(report)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "169d5764",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Calling the save_model_and_report function for the KNN Model\n",
-    "model_filename = f\"KNN_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
-    "report_filename = f\"KNN_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
-    "save_model_and_report(model, report, model_filename, report_filename)"
+    "if Train_KNN == True:\n",
+    "    model = KNN(n_jobs = -1)\n",
+    "    model.fit(train,train_target)\n",
+    "    predictions = model.predict(test)\n",
+    "    report=classification_report(test_target, predictions, digits=4)\n",
+    "    print(report)\n",
+    "    #Calling the save_model_and_report function for the KNN Model\n",
+    "    model_filename = f\"KNN_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
+    "    report_filename = f\"KNN_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "    save_model_and_report(model, report, model_filename, report_filename)\n",
+    "else:\n",
+    "    print(\"KNN Model without gridsearch is not trained.\")"
    ]
   },
   {
@@ -523,24 +508,18 @@
    },
    "outputs": [],
    "source": [
-    "model = DTC()\n",
-    "model.fit(train,train_target)\n",
-    "predictions = model.predict(test)\n",
-    "report=classification_report(test_target, predictions, digits=4)\n",
-    "print(report)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed4580fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Calling the save_model_and_report function for the Decision Tree Model\n",
-    "model_filename = f\"DTC_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
-    "report_filename = f\"DTC_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
-    "save_model_and_report(model, report, model_filename, report_filename)"
+    "if Train_DTC == True:\n",
+    "    model = DTC()\n",
+    "    model.fit(train,train_target)\n",
+    "    predictions = model.predict(test)\n",
+    "    report=classification_report(test_target, predictions, digits=4)\n",
+    "    print(report)\n",
+    "    #Calling the save_model_and_report function for the Decision Tree Model\n",
+    "    model_filename = f\"DTC_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
+    "    report_filename = f\"DTC_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "    save_model_and_report(model, report, model_filename, report_filename)\n",
+    "else:\n",
+    "    print(\"Decision Tree Model without gridsearch is not trained.\")"
    ]
   },
   {
@@ -584,24 +563,18 @@
    },
    "outputs": [],
    "source": [
-    "model = RFC(n_jobs = -1)\n",
-    "model.fit(train,train_target)\n",
-    "predictions = model.predict(test)\n",
-    "report=classification_report(test_target, predictions, digits=4)\n",
-    "print(report)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9defceb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Calling the save_model_and_report function for the Random Forest Model\n",
-    "model_filename = f\"RFC_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
-    "report_filename = f\"RFC_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
-    "save_model_and_report(model, report, model_filename, report_filename)"
+    "if Train_RF == True:\n",
+    "    model = RFC(n_jobs = -1)\n",
+    "    model.fit(train,train_target)\n",
+    "    predictions = model.predict(test)\n",
+    "    report=classification_report(test_target, predictions, digits=4)\n",
+    "    print(report)\n",
+    "    #Calling the save_model_and_report function for the Random Forest Model\n",
+    "    model_filename = f\"RFC_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
+    "    report_filename = f\"RFC_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "    save_model_and_report(model, report, model_filename, report_filename)\n",
+    "else:\n",
+    "    print(\"Random Forest Model without gridsearch is not trained.\")"
    ]
   },
   {
@@ -645,33 +618,18 @@
    },
    "outputs": [],
    "source": [
-    "model = XGB.XGBClassifier(objective='binary:logistic')\n",
-    "model.fit(train,train_target)\n",
-    "predictions = model.predict(test)\n",
-    "report=classification_report(test_target, predictions, digits=4)\n",
-    "print(report)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6731cc8c",
-   "metadata": {
-    "papermill": {
-     "duration": 0.007832,
-     "end_time": "2024-03-08T17:39:49.764663",
-     "exception": false,
-     "start_time": "2024-03-08T17:39:49.756831",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#Calling the save_model_and_report function for the XGB Model\n",
-    "model_filename = f\"XGB_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
-    "report_filename = f\"XGB_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
-    "save_model_and_report(model, report, model_filename, report_filename)"
+    "if Train_XGB == True:\n",
+    "    model = XGB.XGBClassifier(objective='binary:logistic')\n",
+    "    model.fit(train,train_target)\n",
+    "    predictions = model.predict(test)\n",
+    "    report=classification_report(test_target, predictions, digits=4)\n",
+    "    print(report)\n",
+    "    #Calling the save_model_and_report function for the XGB Model\n",
+    "    model_filename = f\"XGB_Basemodel_no_gridsearch_{Config.sample_name}.pkl\"\n",
+    "    report_filename = f\"XGB_Basemodel_no_gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "    save_model_and_report(model, report, model_filename, report_filename)\n",
+    "else:\n",
+    "    print(\"XBG Model without gridsearch is not trained.\")"
    ]
   }
  ],
