notebook 2a prepared to run all models for mitbih a without gridsearch.

--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "id": "96a6a1e1",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 89,
    "id": "c3a84163",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 84,
    "id": "06073fe3",
    "metadata": {
     "execution": {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 83,
    "id": "71a126b0",
    "metadata": {
     "execution": {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 85,
    "id": "f3cbb4eb",
    "metadata": {
     "execution": {
@@ -197,7 +197,7 @@
     "    undersample = False #Refers to undersampling with random undersampler\n",
     "    sample_name = \"UNDEFINED_SAMPLE\"\n",
     "\n",
-    "Train_SVM =  False #trains the SVM Model without Gridsearch\n",
+    "Train_SVM =  True #trains the SVM Model without Gridsearch\n",
     "Train_KNN = True #trains the KNN Model without Gridsearch\n",
     "Train_DTC = True #trains the DTC Model without Gridsearch\n",
     "Train_RF = True #trains the RF Model without Gridsearch\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 86,
    "id": "045ff622",
    "metadata": {
     "execution": {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 87,
    "id": "303ceae0",
    "metadata": {
     "execution": {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "id": "12e9d176",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 94,
    "id": "da81ef52",
    "metadata": {
     "execution": {
@@ -335,7 +335,7 @@
        "(87554, 187)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "id": "140181b5",
    "metadata": {
     "execution": {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "id": "3784bfce",
    "metadata": {
     "execution": {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "id": "9ba3453f",
    "metadata": {
     "execution": {
@@ -530,15 +530,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9760    0.9757    0.9758     18118\n",
-      "         1.0     0.6390    0.6367    0.6378       556\n",
-      "         2.0     0.8612    0.8653    0.8632      1448\n",
-      "         3.0     0.5525    0.6173    0.5831       162\n",
-      "         4.0     0.9491    0.9391    0.9440      1608\n",
+      "         0.0     0.9754    0.9743    0.9748     18118\n",
+      "         1.0     0.6374    0.6259    0.6316       556\n",
+      "         2.0     0.8543    0.8667    0.8605      1448\n",
+      "         3.0     0.5690    0.6111    0.5893       162\n",
+      "         4.0     0.9396    0.9384    0.9390      1608\n",
       "\n",
-      "    accuracy                         0.9544     21892\n",
-      "   macro avg     0.7956    0.8068    0.8008     21892\n",
-      "weighted avg     0.9548    0.9544    0.9546     21892\n",
+      "    accuracy                         0.9530     21892\n",
+      "   macro avg     0.7951    0.8033    0.7990     21892\n",
+      "weighted avg     0.9532    0.9530    0.9531     21892\n",
       "\n",
       "The model was saved as DTC_Basemodel_no_gridsearch_MITBIH_A_Original.pkl in folder ../models/ML_Models.\n",
       "The classification report was saved as DTC_Basemodel_no_gridsearch_MITBIH_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "id": "37e1a610",
    "metadata": {
     "execution": {
@@ -606,15 +606,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9727    0.9992    0.9858     18118\n",
-      "         1.0     0.9822    0.5971    0.7427       556\n",
-      "         2.0     0.9808    0.8826    0.9291      1448\n",
-      "         3.0     0.8739    0.5988    0.7106       162\n",
-      "         4.0     0.9948    0.9459    0.9697      1608\n",
+      "         0.0     0.9724    0.9992    0.9857     18118\n",
+      "         1.0     0.9882    0.6043    0.7500       556\n",
+      "         2.0     0.9822    0.8778    0.9271      1448\n",
+      "         3.0     0.8814    0.6420    0.7429       162\n",
+      "         4.0     0.9961    0.9434    0.9690      1608\n",
       "\n",
       "    accuracy                         0.9744     21892\n",
-      "   macro avg     0.9609    0.8047    0.8676     21892\n",
-      "weighted avg     0.9744    0.9744    0.9726     21892\n",
+      "   macro avg     0.9641    0.8133    0.8749     21892\n",
+      "weighted avg     0.9746    0.9744    0.9728     21892\n",
       "\n",
       "The model was saved as RFC_Basemodel_no_gridsearch_MITBIH_A_Original.pkl in folder ../models/ML_Models.\n",
       "The classification report was saved as RFC_Basemodel_no_gridsearch_MITBIH_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "id": "5a866d4e",
    "metadata": {
     "execution": {
