--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "id": "96a6a1e1",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "id": "c3a84163",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "id": "06073fe3",
    "metadata": {
     "execution": {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "id": "71a126b0",
    "metadata": {
     "execution": {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "id": "f3cbb4eb",
    "metadata": {
     "execution": {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "id": "045ff622",
    "metadata": {
     "execution": {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "id": "303ceae0",
    "metadata": {
     "execution": {
@@ -277,28 +277,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "id": "12e9d176",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Function to save models and classification report directly after running.\n",
-    "import os\n",
-    "import pickle\n",
-    "\n",
     "def save_model_and_report(model, report, model_filename, report_filename, model_folder=\"../models/ML_Models\", report_folder=\"../reports/figures/ML_Models\"):\n",
-    "    # Check if model file size is greater than 98MB\n",
+    "    # Save the model\n",
     "    model_savepath = os.path.join(model_folder, model_filename)\n",
+    "    with open(model_savepath, \"wb\") as f:\n",
+    "        pickle.dump(model, f)\n",
+    "    print(f\"The model was saved as {model_filename} in folder {model_folder}.\")\n",
+    "\n",
+    "    # Check if model file size is greater than 98MB\n",
     "    if os.path.getsize(model_savepath) > 98 * 1024 * 1024:  # Check if size is greater than 98MB\n",
     "        print(\"Model file size is too big. Changing save path...\")\n",
     "        model_folder = \"../data/models_too_big_for_git\"\n",
     "        os.makedirs(model_folder, exist_ok=True)  # Create the directory if it doesn't exist\n",
-    "        model_savepath = os.path.join(model_folder, model_filename)\n",
-    "\n",
-    "    # Save the model\n",
-    "    with open(model_savepath, \"wb\") as f:\n",
-    "        pickle.dump(model, f)\n",
-    "    print(f\"The model was saved as {model_filename} in folder {model_folder}.\")\n",
+    "        new_model_savepath = os.path.join(model_folder, model_filename)\n",
+    "        os.replace(model_savepath, new_model_savepath)  # Move the model to the new location\n",
+    "        print(f\"Model moved to {model_folder} due to its size.\")\n",
     "\n",
     "    # Save the classification report\n",
     "    report_savepath = os.path.join(report_folder, report_filename)\n",
@@ -310,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "da81ef52",
    "metadata": {
     "execution": {
@@ -365,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "id": "140181b5",
    "metadata": {
     "execution": {
@@ -388,7 +387,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM Model withoud gridsearch is not trained\n"
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0     0.9672    0.9982    0.9825     18118\n",
+      "         1.0     0.9632    0.5647    0.7120       556\n",
+      "         2.0     0.9667    0.8626    0.9117      1448\n",
+      "         3.0     0.7500    0.4815    0.5865       162\n",
+      "         4.0     0.9959    0.9111    0.9516      1608\n",
+      "\n",
+      "    accuracy                         0.9680     21892\n",
+      "   macro avg     0.9286    0.7636    0.8289     21892\n",
+      "weighted avg     0.9676    0.9680    0.9657     21892\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../models/ML_Models/SVM_Basemodel_no_gridsearch_MITBIH_A_Original.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m     model_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSVM_Basemodel_no_gridsearch_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mConfig\u001b[38;5;241m.\u001b[39msample_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m     report_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSVM_Basemodel_no_gridsearch_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mConfig\u001b[38;5;241m.\u001b[39msample_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_classification_report.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 11\u001b[0m     \u001b[43msave_model_and_report\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreport\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_filename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreport_filename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSVM Model withoud gridsearch is not trained\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[15], line 8\u001b[0m, in \u001b[0;36msave_model_and_report\u001b[0;34m(model, report, model_filename, report_filename, model_folder, report_folder)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave_model_and_report\u001b[39m(model, report, model_filename, report_filename, model_folder\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../models/ML_Models\u001b[39m\u001b[38;5;124m\"\u001b[39m, report_folder\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../reports/figures/ML_Models\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# Check if model file size is greater than 98MB\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     model_savepath \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(model_folder, model_filename)\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetsize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_savepath\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m98\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1024\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1024\u001b[39m:  \u001b[38;5;66;03m# Check if size is greater than 98MB\u001b[39;00m\n\u001b[1;32m      9\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel file size is too big. Changing save path...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m         model_folder \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/models_too_big_for_git\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "File \u001b[0;32m<frozen genericpath>:50\u001b[0m, in \u001b[0;36mgetsize\u001b[0;34m(filename)\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../models/ML_Models/SVM_Basemodel_no_gridsearch_MITBIH_A_Original.pkl'"
      ]
     }
    ],
@@ -429,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "3784bfce",
    "metadata": {
     "execution": {
@@ -505,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "9ba3453f",
    "metadata": {
     "execution": {
@@ -581,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "37e1a610",
    "metadata": {
     "execution": {
@@ -657,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "5a866d4e",
    "metadata": {
     "execution": {
